--- a/platformio.ini
+++ b/platformio.ini
@@ -21,3 +21,5 @@ build_flags =
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.15.1
 	plageoj/UrlEncode@^1.0.1
+	esp32async/ESPAsyncWebServer@^3.8.1
+extra_scripts = pre:tools/gen_web_page.py
